<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
   android:background="@drawable/back"
  android:layout_height="fill_parent" android:orientation="vertical">
    <AbsoluteLayout android:id="@+id/absoluteLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/bettitle" android:layout_width="wrap_content" android:text="@string/test1bet2head" android:layout_height="wrap_content" android:textSize="30dip" android:layout_x="108dip" android:layout_y="21dip"></TextView>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:text="User Name" android:layout_height="wrap_content" android:layout_x="10dip" android:layout_y="16dip" android:textSize="20dip"></TextView>
        <AutoCompleteTextView android:layout_width="150dip" android:text="" android:layout_height="wrap_content" android:id="@+id/autoCompleteTextView1" android:layout_x="137dip" android:layout_y="6dip"></AutoCompleteTextView>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" 
        android:layout_x="2dip" 
        android:background="@drawable/btn"
        android:id="@+id/betbutton2" android:layout_y="49dip" android:text="@string/betbut2" android:layout_width="150dip"></Button>
        <Button android:text="@string/betbut" 
        android:layout_width="150dip" 
        android:background="@drawable/btn"
        android:layout_height="wrap_content" android:id="@+id/betbutton1" android:layout_x="170dip" android:layout_y="48dip"></Button>
    </AbsoluteLayout>
</LinearLayout>

