<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:background="@drawable/back"
  android:orientation="vertical">
    <AbsoluteLayout android:id="@+id/absoluteLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/statisticstextView1" android:textSize="35dip" android:layout_x="88dip" android:layout_y="26dip" android:text="@string/statshead"></TextView>
        <TextView android:layout_x="9dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Hello  " android:id="@+id/statstextView4" android:layout_y="2dip" android:textSize="20dip"></TextView>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:textSize="20dip" android:text="@string/statstab1" android:layout_y="20dip" android:layout_x="33dip"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="202dip" android:id="@+id/textView3" android:text="@string/statstab2" android:textSize="20dip" android:layout_y="20dip"></TextView>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="52dip" android:text="" android:layout_y="18dip" android:id="@+id/testnotextView4"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_x="220dip" android:text="" android:layout_y="16dip" android:id="@+id/testscoretextView5"></TextView>
    </AbsoluteLayout>
</LinearLayout>
