<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:background="@drawable/back2"
  android:layout_height="fill_parent" android:orientation="vertical">
    <AbsoluteLayout android:id="@+id/absoluteLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/newusertextView1" android:layout_width="wrap_content" android:text="@string/newusertitle" android:layout_height="wrap_content" android:textSize="30dip" android:layout_x="69dip" android:layout_y="17dip"></TextView>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:text="Enter Name" android:layout_height="wrap_content" android:layout_x="16dip" android:layout_y="26dip" android:textSize="20dip"></TextView>
        <EditText android:layout_width="150dip" android:text="" android:layout_height="wrap_content" android:id="@+id/newusereditText1" android:layout_x="148dip" android:layout_y="14dip"></EditText>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:text="Gender" android:layout_height="wrap_content" android:textSize="20dip" android:layout_x="16dip" android:layout_y="29dip"></TextView>
   <RadioGroup  android:layout_height="wrap_content"   android:orientation="vertical" android:layout_x="150dip" android:layout_width="100dip">
       <RadioButton android:id="@+id/gen1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Male"></RadioButton>   
    <RadioButton    android:id="@+id/gen2"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    android:text="Female" />   
     
    </RadioGroup>
   
   
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout4" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:text="@string/newuserbut1" 
        android:background="@drawable/btn"
        android:layout_width="150dip" android:layout_height="wrap_content" android:id="@+id/newuserbutton1" android:layout_x="145dip" android:layout_y="38dip"></Button>
        <ImageView android:src="@drawable/icon" android:id="@+id/imageView1" android:layout_x="36dip" android:layout_y="13dip" android:layout_width="75dip" android:layout_height="75dip"></ImageView>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_width="200dip" 
        android:background="@drawable/btn"
        android:layout_height="wrap_content" android:id="@+id/newuserbutton2" android:layout_x="64dip" android:text="@string/newuserbut2" android:layout_y="38dip"></Button>
    </AbsoluteLayout>
</LinearLayout>
