<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:background="@drawable/back"
  android:layout_height="fill_parent" android:orientation="vertical">
    <AbsoluteLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/absoluteLayout1" android:fadingEdgeLength="3px" android:minHeight="120px" android:minWidth="130px">
        <ImageView android:layout_height="120dip" android:src="@drawable/icon" android:id="@+id/profimageView1" android:layout_width="130dip" android:layout_x="177dip" android:layout_y="10dip"></ImageView>
        <TextView android:id="@+id/test1textView2" android:text="Welcome  " android:layout_height="wrap_content" android:textSize="30dip" android:layout_width="wrap_content" android:layout_x="18dip" android:layout_y="41dip" android:textStyle="bold"></TextView>
        <Button android:id="@+id/test1button1" 
        android:background="@drawable/btn"
        android:text="@string/bt6" android:layout_height="wrap_content" android:layout_width="250dip" android:layout_x="33dip" android:layout_y="328dip"></Button>
        <TextView android:id="@+id/teststextView4" android:text="Tests Taken : " android:layout_height="wrap_content" android:textSize="20dip" android:layout_width="wrap_content" android:layout_y="273dip" android:layout_x="14dip"></TextView>
        <TextView android:id="@+id/highscoretextView3" android:text="High Score : " android:layout_height="wrap_content" android:textSize="20dip" android:layout_width="wrap_content" android:layout_y="232dip" android:layout_x="14dip"></TextView>
        <TextView android:id="@+id/gendertextView2" android:text="Gender : " android:layout_height="wrap_content" android:textSize="20dip" android:layout_width="wrap_content" android:layout_y="193dip" android:layout_x="14dip"></TextView>
        <TextView android:id="@+id/nametextView1" android:text="Name : " android:layout_height="wrap_content" android:textSize="20dip" android:layout_width="wrap_content" android:layout_y="153dip" android:layout_x="14dip"></TextView>
    </AbsoluteLayout>
    <AbsoluteLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/absoluteLayout2">
        <Button android:id="@+id/test1button2" 
        android:text="@string/bt7" 
        android:background="@drawable/btn"
        android:layout_height="wrap_content" android:layout_width="250dip" android:layout_y="20dip" android:layout_x="32dip"></Button>
    </AbsoluteLayout>
    <AbsoluteLayout android:id="@+id/absoluteLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/delprofbutton" android:background="@drawable/btn" android:layout_height="wrap_content" android:layout_width="250dip" android:text="@string/deleteprofile" android:layout_y="13dip" android:layout_x="32dip"></Button>
    </AbsoluteLayout>
   
</LinearLayout>
</ScrollView>